include $(top_srcdir)/Makefile.am.global

nodist_pkginclude_HEADERS = divine-int.hh

nobase_pkginclude_HEADERS = sevine.h divine.h \
                         common/inttostr.hh \
                         common/error.hh \
                         common/types.hh \
                         common/array.hh \
                         common/array_of_abstract.hh \
                         common/bit_string.hh \
			 system/data.hh \
			 system/explicit_system.hh \
			 system/expression.hh \
			 system/path.hh \
			 system/process.hh \
			 system/state.hh \
			 system/system_abilities.hh \
			 system/system.hh \
			 system/system_trans.hh \
			 system/transition.hh \
                         system/dve/dve_explicit_system.hh \
			 system/dve/dve_expression.hh \
			 system/dve/dve_process.hh \
			 system/dve/dve_system.hh \
			 system/dve/dve_system_trans.hh \
			 system/dve/dve_transition.hh \
			 system/dve/dve_source_position.hh \
			 system/dve/dve_process_decomposition.hh \
			 system/dveC/dveC_explicit_system.hh \
                         system/dve/syntax_analysis/dve_commonparse.hh \
                         system/dve/syntax_analysis/dve_gramsymb.hh \
                         system/dve/syntax_analysis/dve_token_vector.hh \
			 system/dve/syntax_analysis/dve_keywords.cc \
                         system/dve/syntax_analysis/dve_symbol.hh \
                         system/dve/syntax_analysis/dve_symbol_table.hh \
                         system/dve/syntax_analysis/dve_parser.hh \
                         system/dve/syntax_analysis/dve_grammar.hh \
			 system/dve/syntax_analysis/dve_flex_lexer.hh \
                         system/dve/dve_prob_transition.hh \
                         system/dve/dve_prob_explicit_system.hh \
                         system/dve/dve_prob_process.hh \
                         system/dve/dve_prob_system.hh \
                         system/prob_transition.hh \
                         system/prob_process.hh \
                         system/prob_system.hh \
                         system/prob_explicit_system.hh \
                         system/bymoc/bymoc_explicit_system.hh \
			 system/bymoc/bymoc_expression.hh \
			 system/bymoc/bymoc_process.hh \
			 system/bymoc/bymoc_system.hh \
			 system/bymoc/bymoc_system_trans.hh \
			 system/bymoc/bymoc_transition.hh \
			 system/bymoc/bymoc_process_decomposition.hh \
			 system/bymoc/vm/bytecode.h \
			 system/bymoc/vm/hashtab.h \
			 system/bymoc/vm/instr.h \
			 system/bymoc/vm/instr_tools.h \
			 system/bymoc/vm/instr_wrap.h \
			 system/bymoc/vm/interactive.h \
			 system/bymoc/vm/rt_err.h \
			 system/bymoc/vm/search.h \
			 system/bymoc/vm/split.h \
			 system/bymoc/vm/state.h \
			 system/bymoc/vm/state_parts.h \
			 system/bymoc/vm/tools.h \
			 system/bymoc/vm/instr_step.h \
			 system/bymoc/vm/state_inline.h \
			 system/bymoc/vm/timeval.h \
			 system/bymoc/vm/nipsvm.h \
			 system/mcrl2_explicit_system.hh \
			 system/mcrl2_system_trans.hh \
			 system/mcrl2_system.hh \
                         storage/compressor.hh \
			 storage/huffman.cc \
			 storage/huffman.hh \
                         storage/explicit_storage.hh \
                         common/sysinfo.hh \
                         common/reporter.hh \
			 common/process_decomposition.hh \
			 common/hash_function.hh \
                         por/spor.hh \
			 por/por.hh \
                         common/deb.hh \
                         distributed/message.hh \
                         distributed/network.hh \
                         distributed/distributed.hh \
                         common/distr_reporter.hh \
                         common/logger.hh \
                         common/deb.hh \
			 common/undeb.hh \
			 common/sysopen.hh
