include $(top_srcdir)/Makefile.am.global
noinst_HEADERS=analyzer.hh  buchi.hh  lexical_analyzer.hh  mu_calc_formula.hh  transformer.hh

bin_PROGRAMS = $(top_srcdir)/bin/$(BINPREFIX)lmu2ba

__top_srcdir__bin___BINPREFIX_lmu2ba_SOURCES = \
   analyzer.cc  buchi.cc  lexical_analyzer.cc  main.cc  mu_calc_formula.cc  transformer.cc


