include $(top_srcdir)/Makefile.am.global

bin_PROGRAMS = $(top_srcdir)/bin/$(BINPREFIX)reachability
noinst_HEADERS = bit_hash.hh reachability_observer.hh search.hh parameters.hh # Uncomment if necessary
__top_srcdir__bin___BINPREFIX_reachability_SOURCES = bit_hash.cc reachability.cc reachability_observer.cc search.cc # Modify, if necessary

LDADD = $(SEVINE_LIB)

